<resources>
    <string name="app_name">WordsFactory</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="third_fragment_label">Third Fragment</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="start">Let\'s Start</string>
    <string name="login">Log in</string>
    <string name="signup">Sign up</string>
    <string name="password">Password</string>
    <string name="email">E-mail</string>
    <string name="login_failure">Failed to login</string>
    <string name="login_fail_empty_fields">Some of your fields does not contain any text.</string>
    <string name="add_to_dic">Add to Dictionary</string>
    <string name="name">Name</string>
    <string name="dictionary">Dictionary</string>
    <string name="training">Training</string>
    <string name="video">Video</string>
    <string name="create_account_desc">Create your account</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_intro">IntroActivity</string>
    <string name="intro11">Learn anytime \nand anywhere</string>
    <string name="intro12">Quarantine is the perfect time to spend your \nday learning something new, from anywhere!</string>
    <string name="intro21">Find a course \nfor you</string>
    <string name="intro31">Improve your skills</string>
    <string name="test_color_text"><font color='#65AAEA'>Example: </font> he developed an interest in cooking.</string>
    <string name="back">back</string>
    <string name="todo">TODO</string>
    <string name="under_active_development">Under active development!</string>
    <string name="search_course">Search Course</string>
    <string name="lets_learn">Let\'s learn!</string>
</resources>